clean up of UI buttons and ecommerce search .

--- a/applications/humanres/widget/forms/EmplPositionForms.xml
+++ b/applications/humanres/widget/forms/EmplPositionForms.xml
@@ -32,7 +32,7 @@ under the License.
             </service>
         </actions>
         <auto-fields-entity entity-name="EmplPosition" default-field-type="display"/>
-        <field name="emplPositionId" title="${uiLabelMap.HumanResEmployeePositionId}" widget-style="linktext">
+        <field name="emplPositionId" title="${uiLabelMap.HumanResEmployeePositionId}" widget-style=btn btn-link>
             <hyperlink also-hidden="false" description="${emplPositionId}" target="emplPositionView">
                 <parameter param-name="emplPositionId"/>
             </hyperlink>
