--- a/applications/humanres/widget/forms/PayGradeForms.xml
+++ b/applications/humanres/widget/forms/PayGradeForms.xml
@@ -38,7 +38,7 @@
             </service>
         </actions>
         <auto-fields-service default-field-type="display" service-name="updatePayGrade"/>
-        <field name="payGradeId" title="${uiLabelMap.HumanResPayGradeID}" widget-style="linktext">
+        <field name="payGradeId" title="${uiLabelMap.HumanResPayGradeID}" widget-style=btn btn-link>
             <hyperlink also-hidden="true" target="EditPayGrade" target-type="plain" description="${payGradeId}">
                 <parameter param-name="payGradeId"/>
             </hyperlink>
